--- a/scss/custom.css
+++ b/scss/custom.css
@@ -347,3 +347,39 @@ imgFondo{
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+/* Profile Editor */
+
+.profile{
+    background-image: url(../media/habitacionCarusel4.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.profile::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.3); /* opacidad del 50% */
+}
+
+
+.profile-header{
+    width: 450px;
+    background-color: rgba(255, 255, 255, .5);
+    padding: 4rem;
+    border-radius: 10px;
+    position: relative;
+}
+
+.profile-container{
+    width: 450px;
+    background-color: rgba(255, 255, 255, .5);
+    padding: 4rem;
+    border-radius: 10px;
+    position: relative;
+}
+
